# python-project-50

./: .gitignore  Makefile  README.md  YAML.cast  plain.cast  pyproject.toml  recursion.cast
.github/workflows/: pyci.yml
gendiff/: arg_parse.py  diff.py  gendiff.cast  parser.py
gendiff/format/: stylish.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: cli.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_gendiff.py
