[project]
name = "hexlet-code"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

line-length = 80

[lint.per-file-ignores]
"__init__.py" = ["F401"]

[lint]
preview = true
select = ["E", "F", "I", "C90"]

[project.scripts]
gendiff = "gendiff.scripts.cli:main"