[project]
name = "hexlet-code"
version = "0.1.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2"
]

[tool.uv]
dev-dependencies = [
    "pyyaml>=6.0.2",
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

line-length = 80

[lint.per-file-ignores]
"__init__.py" = ["F401"]

[lint]
preview = true
select = ["E", "F", "I", "C90"]
line-length = 80

[project.scripts]
gendiff = "gendiff.scripts.cli:main"