[project]
name = "hexlet-code"
version = "0.3.0"
description = ""
authors = [{name = "Максим Гринь", email = "mgrin98@gmail.com"}]
readme = "README.md"
repository = 'https://github.com/maxgrin04/python-project-50'
packages = [
  { include = "gendiff" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2"
]

[tool.uv]
dev-dependencies = [
    "pyyaml>=6.0.2",
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.ruff]
line-length = 80 

[lint.per-file-ignores]
  # init modules can contain the local imports, logic, unused imports
"__init__.py" = ["F401"]

[lint]
preview = true
select = ["E", "F", "I", "C90"]
line-length = 80

[project.scripts]
gendiff = "gendiff.scripts.cli:main"